--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -2,4 +2,4 @@ clickhouse-odbc (1.0.0.20190611) unstable; urgency=low
 
   * Modified source code
 
- -- proller <proller@yandex-team.ru>  Mon, 18 Dec 2017 16:14:46 +0300
+ -- Alexey Milovidov <milovidov@clickhouse.com>  Mon, 1 Oct 2024 00:00:00 +0000
